tests/fixtures/errors/function_type_mismatch.chisa
type NumToNum = (number) -> number
type BoolToBool = (boolean) -> boolean

let f: NumToNum = { n -> n + 1 }
let g: BoolToBool = f
